NXP-7510: WAR packager now packages a ZIP for Tomcat