@@ -18,6 +18,7 @@
  */
 package org.nuxeo.runtime.deployment.preprocessor;
 
+import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
@@ -51,29 +52,69 @@ import org.w3c.dom.Node;
 import org.xml.sax.SAXException;
 
 /**
- * Packs a Nuxeo Tomcat instance into a WAR file.
- * <p>
- * The configuration parameters must be correct before this is run, in
- * particular:
- * <ul>
- * <li>The VCS configuration must be adapted.
- * </ul>
- * The WAR will need JDBC datasources configuration to run, so the
- * {@code nuxeo.xml} file from Tomcat (for instance) must be installed
- * separately.
- * <p>
- * In addition, the JDBC libraries are needed in the global Tomcat lib.
+ * Packs a Nuxeo Tomcat instance into a WAR file inside a ZIP.
  */
 public class PackWar {
 
-    private static final List<String> MISSING_LIBS = Arrays.asList( //
-            "commons-logging", //
-            "commons-lang", //
-            "log4j", //
+    private static Log log = LogFactory.getLog(PackWar.class);
+
+    private static final List<String> MISSING_WEBINF_LIBS = Arrays.asList( //
             "mail", //
             "freemarker");
 
-    private static Log log = LogFactory.getLog(PackWar.class);
+    private static final List<String> MISSING_LIBS = Arrays.asList( //
+            // WSS
+            "nuxeo-generic-wss-front", //
+            // dependencies of above
+            "log4j", //
+            "commons-logging", //
+            "commons-lang", //
+            // JDBC drivers
+            "derby", //
+            "h2", //
+            "ojdbc", //
+            "postgresql", //
+            "mysql-connector-java", //
+            // JDBC
+            "nuxeo-core-storage-sql-extensions", // for Derby/H2
+            "lucene" // for H2
+    );
+
+    private static final List<String> ENDORSED_LIBS = Arrays.asList( //
+            "jaxb-api", //
+            "jaxws-api" //
+    );
+
+    private static final String ZIP_ENDORSED = "endorsed/";
+
+    private static final String ZIP_LIB = "lib/";
+
+    private static final String ZIP_WEBAPPS_NUXEO = "webapps/nuxeo/";
+
+    private static final String ZIP_WEBINF = ZIP_WEBAPPS_NUXEO + "WEB-INF/";
+
+    private static final String ZIP_WEBINF_LIB = ZIP_WEBINF + "lib/";
+
+    private static final String ZIP_README = "README-NUXEO.txt";
+
+    private static final String README_BEGIN = //
+    "This ZIP must be uncompressed at the root of your Tomcat instance.\n" //
+            + "\n" //
+            + "In order for Nuxeo to run, the following Resource defining your JDBC datasource configuration\n" //
+            + "must be added inside the <GlobalNamingResources> section of the file conf/server.xml\n" //
+            + "\n  ";
+
+    private static final String README_END = "\n\n" //
+            + "Make sure that the 'url' attribute above is correct.\n" //
+            + "Note that the following file also contains database configuration:\n" //
+            + "\n" //
+            + "  webapps/nuxeo/WEB-INF/default-repository-config.xml\n" //
+            + "\n" //
+            + "Also note that you should start Tomcat with more memory than its default, for instance:\n" //
+            + "\n" //
+            + "  JAVA_OPTS=\"-Xms512m -Xmx1024m -XX:MaxPermSize=512m\" bin/catalina.sh start\n" //
+            + "\n" //
+            + "";
 
     private static final String COMMAND_PREPROCESSING = "preprocessing";
 
@@ -81,17 +122,20 @@ public class PackWar {
 
     protected File nxserver;
 
-    protected File war;
+    protected File tomcat;
 
-    public PackWar(File nxserver, File war) {
+    protected File zip;
+
+    public PackWar(File nxserver, File zip) {
         if (!nxserver.isDirectory() || !nxserver.getName().equals("nxserver")) {
             fail("No nxserver found at " + nxserver);
         }
-        if (war.exists()) {
-            fail("Target WAR file " + war + " already exists");
+        if (zip.exists()) {
+            fail("Target ZIP file " + zip + " already exists");
         }
         this.nxserver = nxserver;
-        this.war = war;
+        tomcat = nxserver.getParentFile();
+        this.zip = zip;
     }
 
     public void execute(String command) throws Exception {
@@ -119,11 +163,11 @@ public class PackWar {
     protected void runTemplatePreprocessor() throws Exception {
         if (System.getProperty(ConfigurationGenerator.NUXEO_HOME) == null) {
             System.setProperty(ConfigurationGenerator.NUXEO_HOME,
-                    nxserver.getParent());
+                    tomcat.getAbsolutePath());
         }
         if (System.getProperty(ConfigurationGenerator.NUXEO_CONF) == null) {
             System.setProperty(ConfigurationGenerator.NUXEO_CONF, new File(
-                    nxserver.getParentFile(), "bin/nuxeo.conf").getPath());
+                    tomcat, "bin/nuxeo.conf").getPath());
         }
         new ConfigurationGenerator().run();
     }
@@ -135,31 +179,51 @@ public class PackWar {
     }
 
     protected void executePackaging() throws IOException {
-        OutputStream out = new FileOutputStream(war);
+        OutputStream out = new FileOutputStream(zip);
         ZipOutputStream zout = new ZipOutputStream(out);
         try {
-            String webInfDir = "WEB-INF/";
-            String webInfLibDir = webInfDir + "lib/";
-            zipTree("", new File(nxserver, "nuxeo.war"), false, zout);
-            zipTree(webInfDir, new File(nxserver, "config"), false, zout);
-            zipTree(webInfLibDir, new File(nxserver, "bundles"), false, zout);
-            zipTree(webInfLibDir, new File(nxserver, "lib"), false, zout);
-            // copy missing libs
-            File lib = new File(nxserver.getParent(), "lib");
-            for (String name : lib.list()) {
-                for (String pat : MISSING_LIBS) {
-                    String prefix = pat + '-';
-                    if (name.startsWith(prefix) && name.endsWith(".jar")
-                            && Character.isDigit(name.charAt(prefix.length()))) {
-                        zipFile(new File(lib, name), webInfLibDir + name, zout,
-                                null);
-                        break;
-                    }
-                }
-            }
+
+            // extract jdbc datasource from server.xml into README
+            ByteArrayOutputStream bout = new ByteArrayOutputStream();
+            bout.write(README_BEGIN.getBytes("UTF-8"));
+            ServerXmlProcessor.INSTANCE.process(
+                    newFile(tomcat, "conf/server.xml"), bout);
+            bout.write(README_END.getBytes("UTF-8"));
+            zipBytes(ZIP_README, bout.toByteArray(), zout);
+
+            File nuxeoXml = newFile(tomcat, "conf/Catalina/localhost/nuxeo.xml");
+            zipFile(ZIP_WEBAPPS_NUXEO + "META-INF/context.xml", nuxeoXml, zout,
+                    NuxeoXmlProcessor.INSTANCE);
+            zipTree(ZIP_WEBAPPS_NUXEO, new File(nxserver, "nuxeo.war"), false,
+                    zout);
+            zipTree(ZIP_WEBINF, new File(nxserver, "config"), false, zout);
+            zipTree(ZIP_WEBINF_LIB, new File(nxserver, "bundles"), false, zout);
+            zipTree(ZIP_WEBINF_LIB, new File(nxserver, "lib"), false, zout);
+            zipLibs(ZIP_WEBINF_LIB, new File(tomcat, "lib"),
+                    MISSING_WEBINF_LIBS, zout);
+            zipLibs(ZIP_LIB, new File(tomcat, "lib"), MISSING_LIBS, zout);
+            zipLibs(ZIP_ENDORSED, new File(tomcat, "endorsed"), ENDORSED_LIBS,
+                    zout);
         } finally {
             zout.finish();
             zout.close();
+        }
+    }
+
+    protected static File newFile(File base, String path) {
+        return new File(base, path.replace("/", File.separator));
+    }
+
+    protected void zipLibs(String prefix, File dir, List<String> patterns,
+            ZipOutputStream zout) throws IOException {
+        for (String name : dir.list()) {
+            for (String pat : patterns) {
+                if ((name.startsWith(pat + '-') && name.endsWith(".jar"))
+                        || name.equals(pat + ".jar")) {
+                    zipFile(prefix + name, new File(dir, name), zout, null);
+                    break;
+                }
+            }
         }
     }
 
@@ -170,7 +234,7 @@ public class PackWar {
         zout.closeEntry();
     }
 
-    protected void zipFile(File file, String entryName, ZipOutputStream zout,
+    protected void zipFile(String entryName, File file, ZipOutputStream zout,
             FileProcessor processor) throws IOException {
         ZipEntry zentry = new ZipEntry(entryName);
         if (processor == null) {
@@ -179,6 +243,14 @@ public class PackWar {
         }
         zout.putNextEntry(zentry);
         processor.process(file, zout);
+        zout.closeEntry();
+    }
+
+    protected void zipBytes(String entryName, byte[] bytes, ZipOutputStream zout)
+            throws IOException {
+        ZipEntry zentry = new ZipEntry(entryName);
+        zout.putNextEntry(zentry);
+        zout.write(bytes);
         zout.closeEntry();
     }
 
@@ -202,12 +274,12 @@ public class PackWar {
                 }
                 name = prefix + name;
                 FileProcessor processor;
-                if (name.equals("WEB-INF/web.xml")) {
+                if (name.equals(ZIP_WEBINF + "web.xml")) {
                     processor = WebXmlProcessor.INSTANCE;
                 } else {
                     processor = null;
                 }
-                zipFile(file, name, zout, processor);
+                zipFile(name, file, zout, processor);
             }
         }
     }
@@ -231,16 +303,10 @@ public class PackWar {
         }
     }
 
-    protected static class WebXmlProcessor implements FileProcessor {
-
-        public static WebXmlProcessor INSTANCE = new WebXmlProcessor();
-
-        private static final String LISTENER = "listener";
-
-        private static final String LISTENER_CLASS = "listener-class";
+    protected static abstract class XmlProcessor implements FileProcessor {
 
         @Override
-        public void process(File file, OutputStream zout) throws IOException {
+        public void process(File file, OutputStream out) throws IOException {
             DocumentBuilder parser;
             try {
                 parser = DocumentBuilderFactory.newInstance().newDocumentBuilder();
@@ -251,22 +317,11 @@ public class PackWar {
             try {
                 Document doc = parser.parse(in);
                 doc.setStrictErrorChecking(false);
-                Node c = doc.getDocumentElement().getFirstChild();
-                while (c != null) {
-                    if (LISTENER.equals(c.getNodeName())) {
-                        // insert initial listener
-                        Element listener = doc.createElement(LISTENER);
-                        c.insertBefore(listener, c);
-                        listener.appendChild(doc.createElement(LISTENER_CLASS)).appendChild(
-                                doc.createTextNode(NuxeoStarter.class.getName()));
-                        break;
-                    }
-                    c = c.getNextSibling();
-                }
+                process(doc);
                 Transformer trans = TransformerFactory.newInstance().newTransformer();
                 trans.setOutputProperty(OutputKeys.OMIT_XML_DECLARATION, "no");
                 trans.setOutputProperty(OutputKeys.INDENT, "yes");
-                trans.transform(new DOMSource(doc), new StreamResult(zout));
+                trans.transform(new DOMSource(doc), new StreamResult(out));
             } catch (SAXException e) {
                 throw (IOException) new IOException().initCause(e);
             } catch (TransformerException e) {
@@ -275,6 +330,118 @@ public class PackWar {
                 in.close();
             }
         }
+
+        protected abstract void process(Document doc);
+    }
+
+    protected static class WebXmlProcessor extends XmlProcessor {
+
+        public static WebXmlProcessor INSTANCE = new WebXmlProcessor();
+
+        private static final String LISTENER = "listener";
+
+        private static final String LISTENER_CLASS = "listener-class";
+
+        @Override
+        protected void process(Document doc) {
+            Node n = doc.getDocumentElement().getFirstChild();
+            while (n != null) {
+                if (LISTENER.equals(n.getNodeName())) {
+                    // insert initial listener
+                    Element listener = doc.createElement(LISTENER);
+                    n.insertBefore(listener, n);
+                    listener.appendChild(doc.createElement(LISTENER_CLASS)).appendChild(
+                            doc.createTextNode(NuxeoStarter.class.getName()));
+                    break;
+                }
+                n = n.getNextSibling();
+            }
+        }
+    }
+
+    protected static class NuxeoXmlProcessor extends XmlProcessor {
+
+        public static NuxeoXmlProcessor INSTANCE = new NuxeoXmlProcessor();
+
+        private static final String DOCBASE = "docBase";
+
+        private static final String LOADER = "Loader";
+
+        private static final String LISTENER = "Listener";
+
+        @Override
+        protected void process(Document doc) {
+            Element root = doc.getDocumentElement();
+            root.removeAttribute(DOCBASE);
+            Node n = root.getFirstChild();
+            while (n != null) {
+                Node next = n.getNextSibling();
+                String name = n.getNodeName();
+                if (LOADER.equals(name) || LISTENER.equals(name)) {
+                    root.removeChild(n);
+                }
+                n = next;
+            }
+        }
+    }
+
+    protected static class ServerXmlProcessor implements FileProcessor {
+
+        public static ServerXmlProcessor INSTANCE = new ServerXmlProcessor();
+
+        private static final String GLOBAL_NAMING_RESOURCES = "GlobalNamingResources";
+
+        private static final String RESOURCE = "Resource";
+
+        private static final String NAME = "name";
+
+        private static final String JDBC_NUXEO = "jdbc/nuxeo";
+
+        public String resource;
+
+        @Override
+        public void process(File file, OutputStream out) throws IOException {
+            DocumentBuilder parser;
+            try {
+                parser = DocumentBuilderFactory.newInstance().newDocumentBuilder();
+            } catch (ParserConfigurationException e) {
+                throw (IOException) new IOException().initCause(e);
+            }
+            InputStream in = new FileInputStream(file);
+            try {
+                Document doc = parser.parse(in);
+                doc.setStrictErrorChecking(false);
+                Element root = doc.getDocumentElement();
+                Node n = root.getFirstChild();
+                Element resourceElement = null;
+                while (n != null) {
+                    Node next = n.getNextSibling();
+                    String name = n.getNodeName();
+                    if (GLOBAL_NAMING_RESOURCES.equals(name)) {
+                        next = n.getFirstChild();
+                    }
+                    if (RESOURCE.equals(name)) {
+                        if (((Element) n).getAttribute(NAME).equals(JDBC_NUXEO)) {
+                            resourceElement = (Element) n;
+                            break;
+                        }
+                    }
+                    n = next;
+                }
+                Transformer trans = TransformerFactory.newInstance().newTransformer();
+                trans.setOutputProperty(OutputKeys.OMIT_XML_DECLARATION, "yes");
+                trans.setOutputProperty(OutputKeys.INDENT, "no");
+                trans.transform(new DOMSource(resourceElement), // only resource
+                        new StreamResult(out));
+            } catch (SAXException e) {
+                throw (IOException) new IOException().initCause(e);
+            } catch (TransformerException e) {
+                throw (IOException) new IOException().initCause(e);
+            } finally {
+                in.close();
+            }
+        }
+
     }
 
     public static void fail(String message) {
@@ -292,19 +459,19 @@ public class PackWar {
                 || (args.length == 3 && !Arrays.asList(COMMAND_PREPROCESSING,
                         COMMAND_PACKAGING).contains(args[2]))) {
             fail(String.format(
-                    "Usage: %s <nxserver_dir> <target_war> [command]\n"
+                    "Usage: %s <nxserver_dir> <target_zip> [command]\n"
                             + "    command may be empty or '%s' or '%s'",
                     PackWar.class.getSimpleName(), COMMAND_PREPROCESSING,
                     COMMAND_PACKAGING));
         }
 
         File nxserver = new File(args[0]).getAbsoluteFile();
-        File war = new File(args[1]).getAbsoluteFile();
+        File zip = new File(args[1]).getAbsoluteFile();
         String command = args.length == 3 ? args[2] : null;
 
-        log.info("Packing nuxeo WAR at " + nxserver + " into " + war);
+        log.info("Packing nuxeo WAR at " + nxserver + " into " + zip);
         try {
-            new PackWar(nxserver, war).execute(command);
+            new PackWar(nxserver, zip).execute(command);
         } catch (Exception e) {
             fail("Pack failed", e);
         }
